<resources>
    <string name="app_name">Шраго Александр</string>


    <string name="header_rating">Рейтинг</string>
    <string name="header_code_strings">Написано строк кода</string>
    <string name="header_projects">Проектов</string>

    <string name="contacts_mobile">Мобильный</string>
    <string name="contacts_email">E-mail</string>
    <string name="contacts_vk">Профиль в VK</string>
    <string name="contacts_repo">Профиль в github</string>
    <string name="contacts_about">О себе</string>


    <string name="change_profile_photo">Изменить фотографию профиля</string>


    <string name="auth_enter">Войти</string>
    <string name="auth_email">E-mail</string>
    <string name="auth_pass">Пароль</string>


    <string name="allow">Разрешить</string>
    <string name="hint.choosePhoto">Выберите фотографию</string>

    <string name="auth_forgotten_pass">Забыли пароль?</string>

    <string name="error_permissions_needed">Для корректной работы приложения необходимо дать
        требуемые разрешения
    </string>

    <string name="hint_input_phone">Мобильный (11-20 цифр)</string>
    <string name="hint_input_vk">Профиль VK (vk.com/*)</string>
    <string name="hint_input_github">Профиль github (github.com)</string>
    <string name="hint_input_mail">Введите email</string>

    <string name="error_input_phone">Неверный номер телефона</string>
    <string name="error_input_vk">Неверный профиль VK</string>
    <string name="error_input_github">Неверный профиль github</string>

    <string name="error_input_mail">Неверный email</string>

    <string name="logout">Выйти</string>
    <string name="error_no_network">Сеть недоступна,попробуйте позже</string>
    <string name="error_server">Ошибка сервера</string>
    <string name="error_upload_photo">Не удалось загрузить фото на сервер</string>
    <string name="show_details">ПРОСМОТР</string>
    <string name="search_title">поиск</string>
    <string name="team">Команда</string>
    <string name="my_profile">Мой профиль</string>


    <string-array name="photo_dialog_choices">
        <item>Сделать снимок</item>
        <item>Выбрать из галереи</item>
        <item>Отмена</item>
    </string-array>


    <!-- test volumes of contacts page info -->
    <string name="header_test_rating_vol">6</string>
    <string name="header_test_code_strings_vol">36000</string>
    <string name="header_test_projects_vol">6</string>

    <string name="contacts_test_mobile_vol">+7 (903) 000-00-00</string>
    <string name="contacts_test_email_vol">alexshr@yandex.ru</string>
    <string name="contacts_test_vk_vol">vk.com/alexshr</string>
    <string name="contacts_test_repo_vol">https://github.com/alexshr/DevIntensive</string>
    <string name="contacts_test_about_vol">Lorem ipsum dolor sit amet, consectitur adipiscing elit.
        Nulla quam velit, vulputate eu pharetra nec, mattis ac neque. Duis vulputate commodo
        lectus, ac blandit elit. Lorem ipsum dolor sit amet, consectitur adipiscing elit.
        Nulla quam velit, vulputate eu pharetra nec, mattis ac neque. Duis vulputate commodo
        lectus, ac blandit elit. Lorem ipsum dolor sit amet, consectitur adipiscing elit.
        Nulla quam velit, vulputate eu pharetra nec, mattis ac neque. Duis vulputate commodo
        lectus, ac blandit elit.Lorem ipsum dolor sit amet, consectitur adipiscing elit.
        Nulla quam velit, vulputate eu pharetra nec, mattis ac neque. Duis vulputate commodo
        lectus, ac blandit elit.
    </string>

    <string name="auth_test_email">test@test.ru</string>
    <string name="auth_test_pass">test</string>
    <string name="error_no_user_list">Не получен список пользователей</string>
    <string name="enter_user_name">Введите имя пользователя</string>
    <string name="splash_text">***DeveloperIntensive***</string>
    <string name="refresh_title">обновить с сервера</string>
    <string name="error_login_password">неверный логин или пароль</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="success_refresh">данные успешно обновлены с сервера</string>


</resources>
