<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinator_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:fitsSystemWindows="true"
    tools:context="com.softdesign.devintensive.ui.activities.LoginActivity"
    tools:ignore="contentDescription">

    <FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/login_bg"
        android:paddingLeft="@dimen/auth_screen_padding_h"
        android:paddingRight="@dimen/auth_screen_padding_h">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:id="@+id/auth_layout"
            android:visibility="invisible"
            android:background="@android:color/white">


            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="@dimen/auth_layout_padding"
                android:layout_marginTop="@dimen/auth_layout_padding"

                android:fontFamily="@string/font_medium"
                android:text="@string/auth_enter"
                android:textColor="@color/color_accent"
                android:textSize="@dimen/auth_title_size"
                />


            <android.support.design.widget.TextInputLayout
                android:id="@+id/email_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/title"
                android:layout_marginLeft="@dimen/auth_layout_padding"
                android:layout_marginRight="@dimen/auth_layout_padding"
                android:layout_marginTop="@dimen/auth_textinputlayout_margin_top"
                android:hint="@string/auth_email"
                >

                <EditText
                    android:id="@+id/login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:textAppearance="@style/auth_edit_textappearance"

                    />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/pass_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/email_layout"
                android:layout_marginLeft="@dimen/auth_layout_padding"
                android:layout_marginRight="@dimen/auth_layout_padding"
                android:layout_marginTop="@dimen/auth_textinputlayout_margin_top"
                android:hint="@string/auth_pass">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textAppearance="@style/auth_edit_textappearance"

                    />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/auth_button"

                android:layout_width="@dimen/auth_btn_width"
                android:layout_height="@dimen/auth_btn_height"

                android:layout_below="@id/pass_layout"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="@dimen/auth_btn_margin_bottom"
                android:layout_marginTop="@dimen/auth_btn_margin_top"
                android:background="@drawable/auth_btn_bgr"
                android:fontFamily="@string/font_medium"
                android:text="@string/auth_enter"

                android:textColor="@android:color/white"/>

            <TextView
                android:id="@+id/remember"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/auth_button"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="@dimen/auth_layout_padding"
                android:text="@string/auth_forgotten_pass"
                android:textColor="@color/color_grey_light"
                android:textSize="@dimen/auth_restore_pass_text_size"/>


            <!--red rect inset-->
            <View
                android:layout_width="@dimen/auth_inset_width"
                android:layout_height="@dimen/auth_inset_height"
                android:layout_alignParentLeft="true"
                android:layout_alignTop="@id/title"


                android:background="@color/color_accent"
                />



        </RelativeLayout>

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"

            android:id="@+id/progress"
            android:visibility="visible"
            />

    </FrameLayout>



</android.support.design.widget.CoordinatorLayout>